[package]
name = "cw20-milli"
version = "0.1.1"
authors = ["Hasan ÖZKUL <hasan@millicent.io>"]
description = "Milli GBP CosmWasm-20 compliant token"
license = "Apache-2.0"
repository = ""
homepage = "www.millicent.io"
documentation = "https://globex-innovations.atlassian.net/wiki/spaces/~590198868/pages/68911105/Millicent+Cw20+Smart+Contract+Deployment+Execution"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-utils = "0.13.2" 
cw2 =  "0.13.2" 
cw20 =  "0.13.2" 
cw-storage-plus = "0.13.2" 
cosmwasm-std = "0.16.7"
schemars = "0.8.1"
serde = "1.0.136"
thiserror = "1.0.30"

[dev-dependencies]
cosmwasm-schema = "0.16.7"
